--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+/* * {
+  padding: 0;
+  margin: 0;
+} */
 body {
   background-color: #f1f1f1;
   color: #0f141e;
@@ -11,19 +15,201 @@ body {
 /* font: normal 16px 'Roboto', sans-serif; */
 }
 
+a {
+  color:black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline ;
+}
+
+a:active {
+  color: blue
+}
+
+a:visited {
+  color: grey;
+}
+
+
 .avatar {
-    width: 200px; 
+    width: 300px; 
     border-radius: 28px;
     box-shadow: 4px 4px 14px rgba(0,0,0,0.25);
 }
 
+.info {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+@media (max-width:700px) {
+  .info {
+    text-align: center;
+    display: block;
+  }
+}
+
+.info-text {
+  margin-left: 40px; 
+}
+
+
+.info-text h4 {
+  margin-bottom: 10px;
+}
+
 .info p{
-    color: #86898f;
-    margin: 0;
-    font-style: italic;
-    font-weight: bold;
-    text-decoration: none;
-    /*text-transform: uppercase ;*/
-    /* letter-spacing: 15px; */
-    /* word-spacing: 42px */
+  color: #86898f;
+  margin: 0;
+  font-style: italic;
+  font-weight: bold;
+  text-decoration: none;
+  /*text-transform: uppercase ;*/
+  /* letter-spacing: 15px; */
+  /* word-spacing: 42px */
+}
+
+ /* Box Model */
+
+ .container {
+  max-width: 750px;
+  margin: auto;
+  padding-top: 30px;
+}
+/* 
+.social {
+  background: yellow ;
+
+} */
+
+/* .box-model > div {
+  float: left;
+  background: #000;
+  border:4px solid red;
+  height: 200px;
+  width: 25%;
+  box-sizing: border-box;
+} */
+
+.bg-yellow {
+  background: #ffeb84
+}
+
+.bg-green {
+  background: #92f89a
+}
+
+.bg-red {
+  background: #faa4a4
+}
+
+.card {
+  padding: 15px 20px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+}
+
+.card h2 {
+  margin-bottom: 10px;
+}
+
+.list {
+  padding: 0 20px;
+}
+
+.list li {
+  color: #86898f;
+  margin-bottom: 10px;   
+}
+
+.table {
+  width: 100%;
+}
+
+.table td {
+  padding-bottom: 10px;
+}
+
+.table td:nth-child(2), .table td:nth-child(3) {
+  color:#86898f;
+}
+
+/* .table td:nth-child(even){
+  background: red; */
+
+.link-list {
+  list-style: none;
+  padding:0;
+}
+
+.link-list li {
+  margin-bottom:10px; 
+  padding-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+}
+
+.contact h2 {
+  text-align: center;
+}
+
+.form-group label {
+  display: block;
+  font-size: 14px;
+  color: #86898f;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  background: transparent;
+  border-bottom: 1px solid #ccc;
+  color: #000;
+  padding: 15px 0 10px;
+  outline: none;
+  font-family: inherit;
+}
+
+.row {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.row > .form-group {
+  width: 50%;
+  margin-right: 20px; 
+}
+
+.row > .form-group:first-child {
+  margin-right: 20px;
+}
+
+.btn {
+  background: #111;
+  padding: 15px 20px;
+  color: #fff;
+  border: none;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+/* position */
+
+/* .position {
+  border: 4px solid black;
+  margin-top: 40px;
+  padding: 20px;
+}
+.box {
+  position: static;
+  width: 50px;
+  height: 50px;
+  background: lightcoral; */
 }
